# django-sitemapcfg

./: LICENSE  README.md  TODO  pyproject.toml
sitemap_cfg/: __init__.py  apps.py
sitemap_cfg/management/commands/: mksitemap.py
