[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sitemap_cfg"
authors = [{name = "rw crowther", email = "rw.crowther@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]

classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Framework :: Django"
]

requires-python = ">=3.5"

[project.urls]
Home = "https://github.com/rcrowther/django-sitemapcfg"
